src/main/java/com/example/hyebozabackend/global/error/ErrorResponse.java
package com.example.hyebozabackend.global.error;

public class ErrorResponse {
}
